# rust_crud

./: .gitignore  Cargo.toml  README.md  backlog.db
src/: .main.rs.swp  lib.rs  main.rs
src/api/: movie.rs
src/routes/: backend.rs  frontend.rs
templates/: .home.html.swp  error.html  home.html  index.html  search.html
templates/js/: home.js  search.js
