[package]
name = "axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
sqlite = "0.36.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.208", features=["derive"] }
